book/tests/snapshots/snapshot__run_reference_prql@dates_and_times-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/language-features/dates_and_times-0.prql
---
SELECT
  employees.*,
  DATE '2022-12-31' - dob AS age_at_year_end
FROM
  employees
