book/tests/snapshots/snapshot__run_reference_prql@dbt-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/integrations/dbt-0.prql
---
Failed to compile `{% prql %}
from employees
filter (age | in 20..30)
{% endprql %}
`;  --> 1:1
  |
1 | {% prql %}␊
  | ^---
  |
  = expected query
