book/tests/snapshots/snapshot__run_reference_prql@derive-2.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/derive-2.prql
---
SELECT
  5 AS x
