book/tests/snapshots/snapshot__run_reference_prql@dialect_and_version-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/dialect_and_version-1.prql
---
SELECT
  TOP (10) *
FROM
  employees
ORDER BY
  age
