book/tests/snapshots/snapshot__run_reference_prql@dialect_and_version-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/queries/dialect_and_version-2.prql
---
SELECT
  employees.*
FROM
  employees
