book/tests/snapshots/snapshot__run_reference_prql@distinct-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/prql/language-features/distinct-0.prql
---
SELECT
  DISTINCT department
FROM
  employees
