book/tests/snapshots/snapshot__run_reference_prql@distinct-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/language-features/distinct-1.prql
---
SELECT
  DISTINCT department
FROM
  employees
